--- a/components/footer.html
+++ b/components/footer.html
@@ -74,7 +74,7 @@
         <div class="footer-bottom">
             <div class="footer-bottom-content">
                 <p class="copyright">
-                    <span class="es-text">&copy; 2024 Youkoso Todos los derechos reservados.</span>
+                    <span class="es-text">&copy; 2024 Youkoso. Todos los derechos reservados.</span>
                     <span class="ja-text">&copy; 2024 Youkoso すべての権利を保有しています。</span>
                     <span class="en-text">&copy; 2024 Youkoso All rights reserved.</span>
                 </p>
